# FlooCast

./: .gitignore  EntryWithPlaceholder.py  FlooAuxInput.py  FlooDfuThread.py  FlooInterface.py  FlooInterfaceDelegate.py  FlooMessage.py  FlooMsgAc.py  FlooMsgAd.py  FlooMsgAm.py  FlooMsgBe.py  FlooMsgBm.py  FlooMsgBn.py  FlooMsgCp.py  FlooMsgCt.py  FlooMsgDc.py  FlooMsgEr.py  FlooMsgFd.py  FlooMsgFn.py  FlooMsgFt.py  FlooMsgIq.py  FlooMsgLa.py  FlooMsgLf.py  FlooMsgMd.py  FlooMsgOk.py  FlooMsgPl.py  FlooMsgSt.py  FlooMsgTc.py  FlooMsgUnknown.py  FlooMsgVr.py  FlooParser.py  FlooSettings.py  FlooStateMachine.py  FlooStateMachineDelegate.py  HidDfuAPI.py  LICENSE  README.md  linuxInstall.txt  main.py  myDfuDo.bat  (+5 more)
locales/: messages.pot
locales/ar/LC_MESSAGES/: messages.mo  messages.po
locales/ca/LC_MESSAGES/: messages.mo  messages.po
locales/da/LC_MESSAGES/: messages.mo  messages.po
locales/de/LC_MESSAGES/: messages.mo  messages.po
locales/el/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/es/LC_MESSAGES/: messages.mo  messages.po
locales/fi/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
locales/hi/LC_MESSAGES/: messages.mo  messages.po
locales/it/LC_MESSAGES/: messages.mo  messages.po
locales/iw/LC_MESSAGES/: messages.mo  messages.po
locales/ja/LC_MESSAGES/: messages.mo  messages.po
locales/ko/LC_MESSAGES/: messages.mo  messages.po
locales/nl/LC_MESSAGES/: messages.mo  messages.po
locales/no/LC_MESSAGES/: messages.mo  messages.po
(+22 files in other folders)
