[project]
name = "floocast"
version = "1.1.3"
description = "This desktop application is designed for configuring Flairmesh Technologies' Bluetooth V5.4 dual-mode USB audio source dongle FMA120."
authors = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "wxpython (>=4.2.2,<5.0.0)",
    "pyserial (>=3.5,<4.0)",
    "serial-tool (>=0.0.1,<0.0.2)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
